# poki

./: .README.md.kate-swp  README.md
collections/: 2018-08-pikan-poetry-prize.yaml  alasa-nimi.yaml  deltarune-toki-pona-translations-by riemannhyperthesis.yaml  deltarune-toki-pona-translations-by-ijo-kinesin.yaml  fail-blue-dot.yaml  jan-eka-and-jan-pani-get-up-to-stuff-by-janseme.yaml  jan-kule-lon-tenpo-pini.yaml  kalama-musi-pi-kulupu-Kilikija-by-jan-Majeka.yaml  kalama-sin.yaml  kijetesantakalu-o.yaml  kule-olin.yaml  lipamanka-la-moku.yaml  lipu-Ongezellig-by-jan-Majeka.yaml  lipu-kule.yaml  lipu-monsuta.yaml  lipu-pi-jan-lentan.yaml  lipu-pi-jan-telakoman.yaml  lipu-pona-Ongezellig-by-jan-Majeka.yaml  lipu-pona-la.yaml  lipu-pona-la.yml  lipu-tenpo.yaml  lipu-tili.yaml  lipumanka.yaml  ma-suno.yaml  mi-wile.yaml  mije-sama-mi-li-kama-meli-sama-mi.yaml  mun-la.yaml  musi-nasa-tan-jan-laka.yaml  nasin-anpa.yaml  nasin-pona.yaml  nasin-sisuke.yaml  nimi-ale-lon-toki-pona.yaml  pimeja-jasima.yaml  powe-pini-14.yaml  seme-li-mi.yaml  soko-sijeni.yaml  sona-sin.yaml  soweli-toki.yaml  storyweaver.yaml  tawa-pi-poki-monsi-pi-ma-asija.yaml  (+11 more)
submissions/: submission-1747193312525.yaml  submission-1747194706536.yaml
unsorted/: jan-sepan-jan-wawa.md  lipu-kasi.md  pan-nanpa-wan.md
utils/: README.md  package.json  parse-md.ts  validate-schemas.ts
utils/archive-new-lipu-tenpo-issue/: main.py  pyproject.toml
utils/find-playlist-videos-not-archived/: .gitignore  README.md  main.py  pyproject.toml
utils/reschema/: README.md  main.py  pyproject.toml
(+1935 files in other folders)
